Fixed table spacing

--- a/static/style.css
+++ b/static/style.css
@@ -160,7 +160,7 @@ table {
     /*Removes the borders between the cells*/
     border-collapse: collapse;
     
-    margin-top: 20px auto;
+    margin: 10px;
 
     border-collapse: collapse;
 
